--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Infiniti Real Estate</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<!-- Font Awesome -->
+<link rel="stylesheet" href="{% static 'css/all.css' %}">
+<!-- Bootstrap -->
+<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+<!-- Custom -->
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
+<!-- Lightbox -->
+<link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
+
+<title>Infiniti Real Estate {% block title %}{% endblock %}</title>
 </head>
 <body>
     {% block content %} {% endblock %}
