--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,5 +19,6 @@
 </head>
 <body>
     {% block content %} {% endblock %}
+    <h5>hello</h5>
 </body>
 </html>
