--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 <!-- Lightbox -->
 <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
 
-<title>Infiniti Real Estate</title>
+<title>Infiniti Real Estate {% block title %}{% endblock %}</title>
 </head>
 <body>
     <!-- toopbar -->
