--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
     <div class="container">
@@ -11,10 +10,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <ul class="navbar-nav">
-                <li class="nav-item active mr-3">
+                <li class="nav-item mr-3">
                     <a class="nav-link" href="{% url 'index' %}">Home</a>
                 </li>
-                <li class="nav-item mr-3">
+                <li class="nav-item mr-3"> 
                     <a class="nav-link" href="{% url 'about' %}">About</a>
                 </li>
                 <li class="nav-item mr-3">
@@ -23,6 +22,21 @@
             </ul>
 
             <ul class="navbar-nav ml-auto">
+                {% if user.is_authenticated %}
+                <li class="nav-item mr-3">
+                    <a class="nav-link" href="{% url 'dashboard' %}">
+                        {{ user.username }}'s Dashboard </a>
+                </li>
+                <li class="nav-item mr-3">
+                    <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link">
+                        <i class="fas fa-sign-out-alt"></i> Logout
+                    </a>
+                    <form action="{% url 'logout' %}" method="POST" id="logout">
+                        {% csrf_token %}
+                        <input type="hidden">
+                    </form>
+                </li>
+                {% else %}
                 <li class="nav-item mr-3">
                     <a class="nav-link" href="{% url 'register' %}">
                         <i class="fas fa-user-plus"></i> Register</a>
@@ -33,6 +47,7 @@
 
                         Login</a>
                 </li>
+                {% endif %}
             </ul>
         </div>
     </div>
