saving contact in db

--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -176,15 +176,15 @@
                 <form action="{% url 'contact' %}" method="POST">
                     {% csrf_token %}
                     {% if user.is_authenticated %}
-                        <input type="hidden" name="user_id" value="{{ user_id }}">
+                        <input type="hidden" name="user_id" value="{{ user.id }}">
                     {% else %}
                         <input type="hidden" name="user_id" value="0">
                     {% endif %}
                     <input type="hidden" name="realtor_email" value="{{ listing.realtor.email }}">
-                    <input type="hidden" name="lsiting_id" value="{{ listing.id }}">
+                    <input type="hidden" name="listing_id" value="{{ listing.id }}">
                     <div class="form-group">
                         <label for="property_name" class="col-form-label">Property:</label>
-                        <input type="text" name="listing" class="form-control" value="{{ listing.title }}" disabled>
+                        <input type="text" name="listing" class="form-control" value="{{ listing.title }}">
                     </div>
                     <div class="form-group">
                         <label for="name" class="col-form-label">Name:</label>
